[gd_scene load_steps=18 format=3 uid="uid://dlxnvjne1irpy"]

[ext_resource type="Script" uid="uid://dctuhox5lephu" path="res://game/ui/StartScreen/area_picker.gd" id="1_i6bfq"]
[ext_resource type="Shader" path="res://assets/ui/pauseMenueBlurr.gdshader" id="2_27jtl"]
[ext_resource type="Texture2D" uid="uid://47y0pme0fbl6" path="res://assets/ui/Roadsign.png" id="3_sj2mk"]
[ext_resource type="FontFile" uid="uid://lxs3304evxr3" path="res://assets/ui/fonts/CherryBombOne-Regular.ttf" id="4_ga7dw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bi2ca"]
shader = ExtResource("2_27jtl")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cxt50"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bi2ca"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jce7x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dmnx1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qr4w3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qf0lw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iq2hp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cu6w4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mnp3q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h2khj"]

[sub_resource type="GDScript" id="GDScript_i6bfq"]
script/source = "extends Control

@onready var line_edit: LineEdit = %DebugLevelInput

signal level_chosen(level: String)
signal abort()

func setup():
	show()
	line_edit.text = \"\"
	line_edit.grab_focus()

func _on_line_edit_text_submitted(_new_text: String) -> void:
	confirm_text()

func _on_button_confirm_pressed() -> void:
	confirm_text()

func confirm_text():
	hide()
	level_chosen.emit(line_edit.text)

func _on_button_cancel_pressed() -> void:
	abort.emit()
	hide()
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_27jtl"]
bg_color = Color(0.05882353, 0.05882353, 0.05882353, 0.8901961)

[node name="AreaPicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i6bfq")

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_bi2ca")
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(48.197548, 27.088264)

[node name="Sign" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -293.99994
offset_top = 1.0000038
offset_right = 1866.0
offset_bottom = 3841.0
grow_horizontal = 2
scale = Vector2(0.2894374, 0.2894374)
texture = ExtResource("3_sj2mk")

[node name="Jungle" type="Button" parent="."]
layout_mode = 0
offset_left = 704.0
offset_top = 251.0
offset_right = 1220.8958
offset_bottom = 376.0
scale = Vector2(1.0040706, 0.9943427)
theme_override_colors/font_pressed_color = Color(0.23911008, 0.12829375, 0.049078874, 1)
theme_override_fonts/font = ExtResource("4_ga7dw")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxEmpty_cxt50")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bi2ca")
theme_override_styles/hover = SubResource("StyleBoxEmpty_jce7x")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dmnx1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_qr4w3")
text = "Jungle"

[node name="Vulcano" type="Button" parent="."]
layout_mode = 0
offset_left = 743.16156
offset_top = 599.51526
offset_right = 1227.9109
offset_bottom = 724.51526
rotation = -0.123314455
theme_override_colors/font_pressed_color = Color(0.23921569, 0.12941177, 0.050980393, 1)
theme_override_fonts/font = ExtResource("4_ga7dw")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxEmpty_qf0lw")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_iq2hp")
theme_override_styles/hover = SubResource("StyleBoxEmpty_cu6w4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mnp3q")
theme_override_styles/focus = SubResource("StyleBoxEmpty_h2khj")
text = "Vulcano"

[node name="DebugButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 335.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Select Level Directly (Debug)"

[node name="LevelChoiceOverlay" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = SubResource("GDScript_i6bfq")

[node name="PanelContainer" type="PanelContainer" parent="LevelChoiceOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_27jtl")

[node name="CenterContainer" type="CenterContainer" parent="LevelChoiceOverlay/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LevelChoiceOverlay/PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="LevelChoiceOverlay/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Level Select"
horizontal_alignment = 1

[node name="DebugLevelInput" type="LineEdit" parent="LevelChoiceOverlay/PanelContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
placeholder_text = "level name, e.g. 001"
alignment = 1
expand_to_text_length = true

[node name="ButtonConfirm" type="Button" parent="LevelChoiceOverlay/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "confirm
"

[node name="ButtonCancel" type="Button" parent="LevelChoiceOverlay/PanelContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "cancel
"

[connection signal="pressed" from="Jungle" to="." method="_on_jungle_pressed"]
[connection signal="pressed" from="DebugButton" to="." method="_on_debug_button_pressed"]
[connection signal="text_submitted" from="LevelChoiceOverlay/PanelContainer/CenterContainer/VBoxContainer/DebugLevelInput" to="LevelChoiceOverlay" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="LevelChoiceOverlay/PanelContainer/CenterContainer/VBoxContainer/ButtonConfirm" to="LevelChoiceOverlay" method="_on_button_confirm_pressed"]
[connection signal="pressed" from="LevelChoiceOverlay/PanelContainer/CenterContainer/VBoxContainer/ButtonCancel" to="LevelChoiceOverlay" method="_on_button_cancel_pressed"]
